--- a/stories/MainNav.stories.mdx
+++ b/stories/MainNav.stories.mdx
@@ -95,7 +95,7 @@ import { partDescription } from "./common";
     },
     defaultMNI: {
       name: "default",
-      description: "default slot for SgdsMainnavItem element",
+      description: "Label for the anchor tag",
       table: {
         category: "slot: SgdsMainnavItem",
       },
